manifests/31-middleware.yml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: remove-api-prefix
spec:
  stripPrefix:
    prefixes:
      - /api
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: security-headers
spec:
  headers:
    frameDeny: true
    contentTypeNosniff: true
    referrerPolicy: same-origin
    stsIncludeSubdomains: true
    stsPreload: true
    forceSTSHeader: true
    stsSeconds: 31536000
    contentSecurityPolicy: |
      default-src 'self';
      script-src 'self';
      style-src 'self' 'unsafe-inline';
      img-src 'self' data:;
      font-src 'self';
      object-src 'none';
      media-src 'none';
      frame-ancestors 'none';
      base-uri 'self';
      form-action 'self';
      block-all-mixed-content;
      upgrade-insecure-requests;
