manifests/20-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iprwc-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iprwc
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: iprwc
    spec:
      imagePullSecrets:
        - name: ghcr-access-token
      containers:
        - name: api
          image: ghcr.io/wesleyklop/iprwc-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          volumeMounts:
            - mountPath: /srv/iprwc-backend/static
              name: static
        - name: web
          image: ghcr.io/wesleyklop/iprwc-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
      volumes:
        - name: static
          persistentVolumeClaim:
            claimName: iprwc-static
