manifests/30-service.yml
apiVersion: v1
kind: Service
metadata:
  name: iprwc-svc
spec:
  selector:
    app: iprwc
  ports:
    - protocol: TCP
      name: api
      port: 3000
      targetPort: 3000
    - protocol: TCP
      name: web
      port: 80
      targetPort: 80
